--- a/tabela002.html
+++ b/tabela002.html
@@ -29,11 +29,11 @@
 <body>
     <!-- Anatomia para tabelas grandes
         table
-            thead
+            thead <Cabeçalho>
                 tr, td, th
-            tbody
+            tbody <Corpo>
                tr, td, th 
-            tboot
+            tboot <rodapé>
                 tr, td, th
     -->
     <table>
