--- a/tabela002.html
+++ b/tabela002.html
@@ -24,11 +24,18 @@
         td.num{
             text-align: right;
         }
+        caption {
+            font-size:1.5em ;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
     </style>
 </head>
 <body>
     <!-- Anatomia para tabelas grandes
         table
+        caption <legenda-titulo>
             thead <Cabeçalho>
                 tr, td, th
             tbody <Corpo>
@@ -37,10 +44,11 @@
                 tr, td, th
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;" >População</th>
             </tr>
             
 
@@ -161,7 +169,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num">213.317.639</td>
             </tr>
 
