--- a/tabela002.html
+++ b/tabela002.html
@@ -30,6 +30,10 @@
             padding: 10px;
             background-color: lightgray;
         }
+        tbody > tr:nth-child(even) { /*efeito zebrado na tabela*/
+            background-color: lightgray;
+        }
+        tbody > tr:nth-child(add) /*efeito zebrado na tabela*/{background-color: white;}
     </style>
 </head>
 <body>
