--- a/ex024/iframe001.html
+++ b/ex024/iframe001.html
@@ -5,18 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe{
+            height: 400px;
+            width: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>
         Acessando o site do
-
-       <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
-        
+          <!--tamanho padrão de um iframe é de 300 por 150 px-->
+       <iframe src="https://www.cursoemvideo.com/" frameborder="0" scolling="no">
+        <a href="https://www.cursoemvideo.com/" target="_blank">Curso em vido</a>
+    </iframe>
         para aprender a programar
     </p>
+
     <p>
-        O site do <iframe src="https://www.google.com/" frameborder="0"> </iframe>também é muito legal
+        O repositório do Gustavo Guanabara
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+           no <a href="https://gustavoguanabara.github.io" target="_blank">Github</a>
+        </iframe>
+
+
+        também é bem legal!!!
     </p>
+    
 </body>
 </html>
