--- a/ex024/iframe001.html
+++ b/ex024/iframe001.html
@@ -18,7 +18,7 @@
     <p>
         Acessando o site do
           <!--tamanho padrão de um iframe é de 300 por 150 px-->
-       <iframe src="https://www.cursoemvideo.com/" frameborder="0" scolling="no">
+       <iframe src="https://www.cursoemvideo.com/login/" frameborder="0" scolling="no">
         <a href="https://www.cursoemvideo.com/" target="_blank">Curso em vido</a>
     </iframe>
         para aprender a programar
