--- a/ex024/iframe002.html
+++ b/ex024/iframe002.html
@@ -23,7 +23,9 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat dignissimos, consectetur veniam ea numquam sapiente quisquam voluptate? Quod eum iusto labore qui vel, tempore in quos quo, numquam, similique placeat.
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus maxime, quia recusandae non aliquam, ducimus provident facilis totam veritatis voluptates facere sint minus est cum hic esse dolorem natus labore?
         </p>
-        <iframe src="pagina001.html" frameborder="1" height="500px" width="500px"></iframe>
+        <iframe src="paginas-extras/pagina001.html" frameborder="1" height="500px" width="500px">
+            <p>Infelizmente seu navegador não é compativel com isso</p>
+        </iframe>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias praesentium facere harum pariatur optio enim dolorem ratione provident a corrupti explicabo voluptate voluptatem aliquid sed quis, reprehenderit voluptatum quae nisi?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi aliquid nesciunt iste corporis ratione obcaecati, dolore minima magnam animi, tenetur debitis voluptatem officia fugit, nihil maxime dolorum aperiam autem minus.
