--- a/ex025/form003.html
+++ b/ex025/form003.html
@@ -8,20 +8,29 @@
 </head>
 <body>
     <h1>Teste Formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form method="get" autocomplete="on">
         <p>
             <label for="inome">Nome:</label>
             <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome Completo" autocomplete="name">
         </p>
         <p>
             <label for="for">Média</label>
-            <input type="number" name="media" id="imedia" min="0" max="10" placeholder=" 0 à 10" step="0.5" value="5"> 
+            <input type="number" name="media" id="imedia" min="0" max="10" placeholder=" 0 à 10" step="0.5" value="5" required> 
     
         </p>
         <p>
             <label for="imes">Periodo Letivo</label>
-            <input type="month" name="mes" id="imes" value="2020-10">
+            <input type="month" name="mes" id="imes" value="2022-08" required>
         </p>
+        <p>
+            <label for="idia">Dia da Prova</label>
+            <input type="date" name="dia" id="idia" value="2022-08-11">
+        </p>
+        <p>
+            <label for="ihora">Hora da Prova</label>
+            <input type="time" name="hora" id="ihora">
+        </p>
+       
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
