--- a/capitulo25/mq005/index.html
+++ b/capitulo25/mq005/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Query</title>
+    <title>Mis Michele </title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -12,11 +12,11 @@
         <h1>Meu Site</h1>
         <menu>
             <ul>
-                <li><a href="#"></a>Pagina Inicial</li>
-                <li><a href="#"></a>Quem Somos</li>
-                <li><a href="#"></a>Curiosidades</li>
-                <li><a href="#"></a>Informações</li>
-                <li><a href="#"></a>Contatos</li>
+                <li><a href="#">Pagina Inicial</a></li>
+                <li><a href="#">Recado Para Voçê </a></li>
+                <li><a href="#">Quem Somos</a></li>
+                <li><a href="#">Increva-se</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
 
         </menu>
